refactor(mapper): aplicar lógica do DTO ao construtor canônico via mapeamento manual